--- a/index.html
+++ b/index.html
@@ -1,10 +1,130 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Home</a></li>
-        <li class="breadcrumb-item"><a href="#">Library</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Data</li>
-    </ol>
-</nav>
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Home | School Name</title>
+        <link rel="icon" href="">
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+            integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I"
+            crossorigin="anonymous">
+        <!-- Extra CSS -->
+        <link rel="stylesheet" href="css/extras.css">
+        <script type="module"
+            src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
+        <!-- Google Font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Bebas+Neue&amp;display=swap"
+            rel="stylesheet">
+    </head>
+    <body class="bg-secondary">
+
+        <!-- Header -->
+        <header class="bg-dark">
+            <div class="container py-3">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="https://www.example.com/logo.png" alt="School
+                            Name Logo" width="100">
+                    </div>
+                    <div class="col-md-8">
+                        <ul class="nav justify-content-end">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">Cursos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Showroom</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Conócenos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <!-- Breadcrumbs -->
+        <div class="container my-3">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="#">Inicio</a></li>
+                </ol>
+            </nav>
+        </div>
+
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+        <!-- Bootstrap JS -->
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Introduction Carousel -->
+        <section class="container my-5">
+            <div class="row">
+                <div class="col-md-8">
+                    <div id="introCarousel" class="carousel slide"
+                        data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#introCarousel" data-slide-to="0"
+                                class="active"></li>
+                            <li data-target="#introCarousel" data-slide-to="1"></li>
+                            <li data-target="#introCarousel" data-slide-to="2"></li>
+                            <li data-target="#introCarousel" data-slide-to="3"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <h2>Grupo 1</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit.</p>
+                            </div>
+                            <div class="carousel-item">
+                                <h2>Grupo 2</h2>
+                                <p>Sed do eiusmod tempor incididunt ut labore et
+                                    dolore magna aliqua.</p>
+                            </div>
+                            <div class="carousel-item">
+                                <h2>Grupo 3</h2>
+                                <p>Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip
+                                    ex ea commodo consequat.</p>
+                            </div>
+                            <div class="carousel-item">
+                                <h2>Grupo 4</h2>
+                                <p>Duis aute irure dolor in reprehenderit in
+                                    voluptate velit esse cillum dolore eu fugiat
+                                    nulla pariatur.</p>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#introCarousel"
+                            role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon"
+                                aria-hidden="true"></span>
+                            <span class="sr-only">Anterior</span>
+                        </a>
+                        <a class="carousel-control-next" href="#introCarousel"
+                            role="button" data-slide="next">
+                            <span class="carousel-control-next-icon"
+                                aria-hidden="true"></span>
+                            <span class="sr-only">Siguiente</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Activate the carousel -->
+        <script>
+        $(document).ready(function(){
+            $('#introCarousel').carousel();
+        });
+        </script>
+    </body>
+</html>
