--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home | School Name</title>
+        <title>Home | Code & Art Academy</title>
         <link rel="icon" href="">
+        <!-- Font Awesome -->
+        <link rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
         <!-- Bootstrap CSS -->
         <link rel="stylesheet"
             href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
@@ -20,16 +23,28 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Bebas+Neue&amp;display=swap"
             rel="stylesheet">
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <!-- Bootstrap JS -->
+        <script
+            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
     </head>
     <body class="bg-secondary">
 
         <!-- Header -->
-        <header class="bg-dark">
+        <header class="bg-dark text-white">
             <div class="container py-3">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="https://www.example.com/logo.png" alt="School
-                            Name Logo" width="100">
+                        <img src="https://via.placeholder.com/300x150" alt="Code & Art Academy" width="100">
                     </div>
                     <div class="col-md-8">
                         <ul class="nav justify-content-end">
@@ -60,14 +75,61 @@
             </nav>
         </div>
 
-        <!-- jQuery -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-        <!-- Bootstrap JS -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Introduction Carousel -->
-        <section class="container my-5">
+        <div id="carouselExampleIndicators" class="carousel slide"
+            data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0"
+                    class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100"
+                        src="https://via.placeholder.com/1850x500" alt="First
+                        slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Título (Imagen 01)</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100"
+                        src="https://via.placeholder.com/1850x500" alt="Second
+                        slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Título (Imagen 02)</h5>
+                        <p>Sed do eiusmod tempor incididunt ut labore et
+                            dolore magna aliqua.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100"
+                        src="https://via.placeholder.com/1850x500" alt="Third
+                        slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Título (Imagen 03)</h5>
+                        <p>Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip
+                            ex ea commodo consequat.</p>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators"
+                role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Anterior</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators"
+                role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Siguiente</span>
+            </a>
+        </div>
+
+        <!-- <section class="container my-5">
             <div class="row">
                 <div class="col-md-8">
                     <div id="introCarousel" class="carousel slide"
@@ -81,22 +143,26 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
+                                <img class="d-block w-100" src="https://via.placeholder.com/1850x500" alt="First slide">
                                 <h2>Grupo 1</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur
                                     adipiscing elit.</p>
                             </div>
                             <div class="carousel-item">
+                                <img class="d-block w-100" src="https://via.placeholder.com/1850x500" alt="Second slide">
                                 <h2>Grupo 2</h2>
                                 <p>Sed do eiusmod tempor incididunt ut labore et
                                     dolore magna aliqua.</p>
                             </div>
                             <div class="carousel-item">
+                                <img class="d-block w-100" src="https://via.placeholder.com/1850x500" alt="Third slide">
                                 <h2>Grupo 3</h2>
                                 <p>Ut enim ad minim veniam, quis nostrud
                                     exercitation ullamco laboris nisi ut aliquip
                                     ex ea commodo consequat.</p>
                             </div>
                             <div class="carousel-item">
+                                <img class="d-block w-100" src="https://via.placeholder.com/1850x500" alt="Fourth slide">
                                 <h2>Grupo 4</h2>
                                 <p>Duis aute irure dolor in reprehenderit in
                                     voluptate velit esse cillum dolore eu fugiat
@@ -118,13 +184,124 @@
                     </div>
                 </div>
             </div>
+        </section>-->
+
+        <!-- Cursos Destacados -->
+        <section class="container my-5">
+            <h2 class="text-center mb-5">Cursos Destacados</h2>
+            <div class="row">
+                <div class="col-md-3 mb-4">
+                    <div class="card">
+                        <img src="https://via.placeholder.com/300x200"
+                            class="card-img-top" alt="Curso 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Curso 1</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet,
+                                consectetur adipiscing elit.</p>
+                            <a href="#" class="btn btn-primary">Más información</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <div class="card">
+                        <img src="https://via.placeholder.com/300x200"
+                            class="card-img-top" alt="Curso 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Curso 2</h5>
+                            <p class="card-text">Sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua.</p>
+                            <a href="#" class="btn btn-primary">Más información</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <div class="card">
+                        <img src="https://via.placeholder.com/300x200"
+                            class="card-img-top" alt="Curso 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Curso 3</h5>
+                            <p class="card-text">Ut enim ad minim veniam, quis
+                                nostrud exercitation ullamco laboris nisi ut
+                                aliquip ex ea commodo consequat.</p>
+                            <a href="#" class="btn btn-primary">Más información</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <div class="card">
+                        <img src="https://via.placeholder.com/300x200"
+                            class="card-img-top" alt="Curso 4">
+                        <div class="card-body">
+                            <h5 class="card-title">Curso 4</h5>
+                            <p class="card-text">Duis aute irure dolor in
+                                reprehenderit in voluptate velit esse cillum
+                                dolore eu fugiat nulla pariatur.</p>
+                            <a href="#" class="btn btn-primary">Más información</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Últimas Noticias -->
+        <section class="container my-5">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h2>Últimas Noticias</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <img src="https://via.placeholder.com/1140x200"
+                        class="img-fluid" alt="Banner Noticias">
+                </div>
+            </div>
+        </section>
+        <!-- Llamado a la acción -->
+        <section class="container my-5">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h2>¡Inscríbete ahora!</h2>
+                    <p>Descubre todo lo que tenemos para ofrecerte y empieza a
+                        aprender con nosotros.</p>
+                    <a href="https://www.school.com/contacto" class="btn
+                        btn-primary">Contacta con nosotros</a>
+                </div>
+            </div>
         </section>
 
-        <!-- Activate the carousel -->
-        <script>
-        $(document).ready(function(){
-            $('#introCarousel').carousel();
-        });
-        </script>
+        <!-- Footer -->
+        <footer class="bg-dark text-white mt-5">
+            <div class="container py-4">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h3>Información de contacto</h3>
+                        <p>Dirección: 1234 Calle Principal, Ciudad, País</p>
+                        <p>Teléfono: +1 (123) 456-7890</p>
+                        <p>Correo electrónico: info@school.com</p>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Síguenos en redes sociales</h3>
+                        <section class="mb-4">
+                            <!-- Facebook -->
+                            <a class="btn btn-outline-light btn-floating m-1"
+                                href="#" role="button"><i class="fab
+                                    fa-facebook-f"></i></a>
+                            <!-- Instagram -->
+                            <a class="btn btn-outline-light btn-floating m-1"
+                                href="#" role="button"><i class="fab
+                                    fa-instagram"></i></a>
+                            <!-- Youtube -->
+                            <a class="btn btn-outline-light btn-floating m-1"
+                                href="#" role="button"><i class="fab
+                                    fa-youtube"></i></a>
+                            <!-- Whatsapp -->
+                            <a class="btn btn-outline-light btn-floating m-1"
+                                href="https://api.whatsapp.com/send?phone=+525518106808"
+                                role="button"><i class="fab fa-whatsapp"></i></a>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
