--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             crossorigin="anonymous">
         <!-- Extra CSS -->
         <link rel="stylesheet" href="css/extras.css">
-        <script type="module"
-            src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
+        <link rel="stylesheet" href="https://bootswatch.com/3/united/bootstrap.min.css">
+        <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
         <!-- Google Font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -40,6 +40,73 @@
     <body class="bg-secondary">
 
         <!-- Header -->
+        <!--
+        <div class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+              <div class="navbar-header">
+                <a href="../" class="navbar-brand">Bootswatch</a>
+                <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+              </div>
+              <div class="navbar-collapse collapse" id="navbar-main">
+                <ul class="nav navbar-nav">
+                  <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes" aria-expanded="false">Themes <span class="caret"></span></a>
+                    <ul class="dropdown-menu" aria-labelledby="themes">
+                      <li><a href="../default/">Default</a></li>
+                      <li class="divider"></li>
+                      <li><a href="../cerulean/">Cerulean</a></li>
+                      <li><a href="../cosmo/">Cosmo</a></li>
+                      <li><a href="../cyborg/">Cyborg</a></li>
+                      <li><a href="../darkly/">Darkly</a></li>
+                      <li><a href="../flatly/">Flatly</a></li>
+                      <li><a href="../journal/">Journal</a></li>
+                      <li><a href="../lumen/">Lumen</a></li>
+                      <li><a href="../paper/">Paper</a></li>
+                      <li><a href="../readable/">Readable</a></li>
+                      <li><a href="../sandstone/">Sandstone</a></li>
+                      <li><a href="../simplex/">Simplex</a></li>
+                      <li><a href="../slate/">Slate</a></li>
+                      <li><a href="../spacelab/">Spacelab</a></li>
+                      <li><a href="../superhero/">Superhero</a></li>
+                      <li><a href="../united/">United</a></li>
+                      <li><a href="../yeti/">Yeti</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="../help/">Help</a>
+                  </li>
+                  <li>
+                    <a href="https://blog.bootswatch.com/">Blog</a>
+                  </li>
+                  <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">United <span class="caret"></span></a>
+                    <ul class="dropdown-menu" aria-labelledby="download">
+                      <li><a href="https://jsfiddle.net/bootswatch/cvLkpsx0/">Open Sandbox</a></li>
+                      <li class="divider"></li>
+                      <li><a href="./bootstrap.min.css">bootstrap.min.css</a></li>
+                      <li><a href="./bootstrap.css">bootstrap.css</a></li>
+                      <li class="divider"></li>
+                      <li><a href="./variables.less">variables.less</a></li>
+                      <li><a href="./bootswatch.less">bootswatch.less</a></li>
+                      <li class="divider"></li>
+                      <li><a href="./_variables.scss">_variables.scss</a></li>
+                      <li><a href="./_bootswatch.scss">_bootswatch.scss</a></li>
+                    </ul>
+                  </li>
+                </ul>
+      
+                <ul class="nav navbar-nav navbar-right">
+                  <li><a href="https://builtwithbootstrap.com/" rel="noopener" target="_blank">Built With Bootstrap</a></li>
+                  <li><a href="https://wrapbootstrap.com/?ref=bsw" rel="noopener" target="_blank">WrapBootstrap</a></li>
+                </ul>
+      
+              </div>
+            </div>
+          </div>-->
         <header class="bg-dark text-white">
             <div class="container py-3">
                 <div class="row">
